package org.hyades.processor.scanner.snyk;

import com.fasterxml.jackson.core.type.TypeReference;
import com.fasterxml.jackson.databind.ObjectMapper;
import com.github.packageurl.MalformedPackageURLException;
import com.github.packageurl.PackageURL;
import io.github.resilience4j.circuitbreaker.CircuitBreaker;
import io.quarkus.cache.Cache;
import io.quarkus.cache.CacheName;
import io.quarkus.test.junit.QuarkusTest;
import io.quarkus.test.junit.QuarkusTestProfile;
import io.quarkus.test.junit.TestProfile;
import io.quarkus.test.junit.mockito.InjectMock;
import org.apache.kafka.common.serialization.StringDeserializer;
import org.apache.kafka.common.serialization.StringSerializer;
import org.apache.kafka.streams.TestInputTopic;
import org.apache.kafka.streams.TestOutputTopic;
import org.apache.kafka.streams.Topology;
import org.apache.kafka.streams.TopologyTestDriver;
import org.apache.kafka.streams.test.TestRecord;
import org.eclipse.microprofile.rest.client.inject.RestClient;
import org.hyades.client.snyk.Issue;
import org.hyades.client.snyk.Page;
import org.hyades.client.snyk.ReportRequest;
import org.hyades.client.snyk.SnykClient;
import org.hyades.proto.KafkaProtobufDeserializer;
import org.hyades.proto.KafkaProtobufSerializer;
import org.hyades.proto.vuln.v1.Source;
import org.hyades.proto.vulnanalysis.internal.v1beta1.ScanTask;
import org.hyades.proto.vulnanalysis.v1.Component;
import org.hyades.proto.vulnanalysis.v1.ScanKey;
import org.hyades.proto.vulnanalysis.v1.ScanStatus;
import org.hyades.proto.vulnanalysis.v1.Scanner;
import org.hyades.proto.vulnanalysis.v1.ScannerResult;
import org.junit.jupiter.api.AfterEach;
import org.junit.jupiter.api.BeforeEach;
import org.junit.jupiter.api.Test;
import org.mockito.Mockito;

import javax.inject.Inject;
import javax.inject.Named;
import javax.ws.rs.WebApplicationException;
import javax.ws.rs.core.Response;
import javax.ws.rs.core.Response.Status;
import java.io.IOException;
import java.net.SocketTimeoutException;
import java.nio.file.Paths;
import java.time.Duration;
import java.util.Map;
import java.util.UUID;

import static org.assertj.core.api.Assertions.assertThat;
import static org.mockito.ArgumentMatchers.any;
import static org.mockito.ArgumentMatchers.anyString;
import static org.mockito.Mockito.verify;
import static org.mockito.Mockito.when;

@QuarkusTest
@TestProfile(SnykProcessorTest.TestProfile.class)
class SnykProcessorTest {

    public static class TestProfile implements QuarkusTestProfile {
        @Override
        public Map<String, String> getConfigOverrides() {
            return Map.of(
                    "scanner.snyk.enabled", "true",
                    "scanner.snyk.api.org-id", "test-org-id",
                    "scanner.snyk.api.tokens", "token-1,token-2",
                    "scanner.snyk.batch-size", "100",
                    "quarkus.kafka.snappy.enabled", "false"
            );
        }
    }

    @Inject
    SnykProcessorSupplier processorSupplier;

    @Inject
    ObjectMapper objectMapper;

    @Inject
    @CacheName("snyk")
    Cache cache;

    @InjectMock
    @RestClient
    SnykClient snykClientMock;

    @Inject
    @Named("snykCircuitBreaker")
    CircuitBreaker circuitBreaker;

    private static final String TEST_PURL_JACKSON_BIND = "pkg:maven/com.fasterxml.jackson.core/jackson-databind@2.13.4";

    private TopologyTestDriver testDriver;
    private TestInputTopic<String, ScanTask> inputTopic;
    private TestOutputTopic<ScanKey, ScannerResult> outputTopic;

    @BeforeEach
    void beforeEach() {
        final var topology = new Topology();
        topology.addSource("sourceProcessor", new StringDeserializer(),
                new KafkaProtobufDeserializer<>(ScanTask.parser()), "input-topic");
        topology.addProcessor("snykProcessor", processorSupplier, "sourceProcessor");
        topology.addSink("sinkProcessor", "output-topic",
                new KafkaProtobufSerializer<>(), new KafkaProtobufSerializer<>(), "snykProcessor");

        testDriver = new TopologyTestDriver(topology);
        inputTopic = testDriver.createInputTopic("input-topic",
                new StringSerializer(), new KafkaProtobufSerializer<>());
        outputTopic = testDriver.createOutputTopic("output-topic",
                new KafkaProtobufDeserializer<>(ScanKey.parser()), new KafkaProtobufDeserializer<>(ScannerResult.parser()));
    }

    @AfterEach
    void afterEach() {
        testDriver.close();
        cache.invalidateAll().await().indefinitely();
        circuitBreaker.reset();
    }

    @Test
    void testNoResults() throws Exception {
        when(snykClientMock.getIssues(anyString(), anyString(), any(ReportRequest.class)))
                .thenReturn(getSnykResponseTestData("no-issues-response.json"));

        final TestRecord<String, ScanTask> inputRecord = createTestRecord(TEST_PURL_JACKSON_BIND);
        inputTopic.pipeInput(inputRecord);

        testDriver.advanceWallClockTime(Duration.ofSeconds(6));

        assertThat(outputTopic.getQueueSize()).isEqualTo(1);
        final TestRecord<ScanKey, ScannerResult> outputRecord = outputTopic.readRecord();
        assertThat(outputRecord.key()).isEqualTo(inputRecord.getValue().getKey());
        assertThat(outputRecord.getValue().getStatus()).isEqualTo(ScanStatus.SCAN_STATUS_SUCCESSFUL);
        assertThat(outputRecord.getValue().hasFailureReason()).isFalse();
        assertThat(outputRecord.getValue().getScanner()).isEqualTo(Scanner.SCANNER_SNYK);
        assertThat(outputRecord.getValue().getVulnerabilitiesCount()).isZero();
    }

    @Test
    void testMultipleResultsWithOneMatchingPurlInRequest() throws Exception {
        when(snykClientMock.getIssues(anyString(), anyString(), any(ReportRequest.class)))
                .thenReturn(getSnykResponseTestData("multiple-issues-batch-response.json"));

        final TestRecord<String, ScanTask> inputRecord = createTestRecord(TEST_PURL_JACKSON_BIND);
        inputTopic.pipeInput(inputRecord);

        testDriver.advanceWallClockTime(Duration.ofSeconds(6));

        assertThat(outputTopic.getQueueSize()).isEqualTo(1);
        TestRecord<ScanKey, ScannerResult> outputRecord = outputTopic.readRecord();
        assertThat(outputRecord.key()).isEqualTo(inputRecord.getValue().getKey());
        assertThat(outputRecord.getValue().getStatus()).isEqualTo(ScanStatus.SCAN_STATUS_SUCCESSFUL);
        assertThat(outputRecord.getValue().hasFailureReason()).isFalse();
        assertThat(outputRecord.getValue().getScanner()).isEqualTo(Scanner.SCANNER_SNYK);
        assertThat(outputRecord.getValue().getVulnerabilitiesList()).satisfiesExactlyInAnyOrder(
                vulnerability -> {
                    assertThat(vulnerability.getId()).isEqualTo("SNYK-JAVA-COMFASTERXMLJACKSONCORE-3038426");
                    assertThat(vulnerability.getSource()).isEqualTo(Source.SOURCE_SNYK);
                }
        );
    }

    @Test
    void testCachingWithResult() throws Exception {
        when(snykClientMock.getIssues(anyString(), anyString(), any(ReportRequest.class)))
                .thenReturn(getSnykResponseTestData("one-issue-response.json"));

        inputTopic.pipeInput(createTestRecord(TEST_PURL_JACKSON_BIND));
        testDriver.advanceWallClockTime(Duration.ofSeconds(6));

        inputTopic.pipeInput(createTestRecord(TEST_PURL_JACKSON_BIND));
        testDriver.advanceWallClockTime(Duration.ofSeconds(6));

        inputTopic.pipeInput(createTestRecord(TEST_PURL_JACKSON_BIND));
        testDriver.advanceWallClockTime(Duration.ofSeconds(6));

        assertThat(outputTopic.getQueueSize()).isEqualTo(3);
        assertThat(outputTopic.readRecordsToList()).allSatisfy(record ->
                assertThat(record.getValue().getVulnerabilitiesList()).satisfiesExactly(vulnerability ->
                        assertThat(vulnerability.getId()).isEqualTo("SNYK-JAVA-COMFASTERXMLJACKSONCORE-3038426")));

        // Verify that the client was invoked just once, despite three results being returned.
        verify(snykClientMock, Mockito.times(1)).getIssues(anyString(), anyString(), any(ReportRequest.class));
    }

    @Test
    void testCachingWithNoResults() throws Exception {
        when(snykClientMock.getIssues(anyString(), anyString(), any(ReportRequest.class)))
                .thenReturn(getSnykResponseTestData("no-issues-response.json"));

        inputTopic.pipeInput(createTestRecord(TEST_PURL_JACKSON_BIND));
        testDriver.advanceWallClockTime(Duration.ofSeconds(6));

        inputTopic.pipeInput(createTestRecord(TEST_PURL_JACKSON_BIND));
        testDriver.advanceWallClockTime(Duration.ofSeconds(6));

        inputTopic.pipeInput(createTestRecord(TEST_PURL_JACKSON_BIND));
        testDriver.advanceWallClockTime(Duration.ofSeconds(6));

        assertThat(outputTopic.getQueueSize()).isEqualTo(3);
        assertThat(outputTopic.readRecordsToList()).allSatisfy(record ->
                assertThat(record.getValue().getVulnerabilitiesCount()).isZero());

        // Verify that the client was invoked just once, despite three results being returned.
        verify(snykClientMock, Mockito.times(1)).getIssues(anyString(), anyString(), any(ReportRequest.class));
    }

    @Test
    void testDifferentPurlCasing() throws Exception {
        // Have Snyk return a response with one vulnerability, where the PURL of the
        // package is included in lowercase.
        when(snykClientMock.getIssues(anyString(), anyString(), any(ReportRequest.class)))
                .thenReturn(getSnykResponseTestData("different-purl-casing-response.json"));

        // Scan a PURL with mixed-case.
        inputTopic.pipeInput(createTestRecord("pkg:nuget/Microsoft.AspNetCore.App.Runtime.linux-x64@5.0.7"));

        testDriver.advanceWallClockTime(Duration.ofSeconds(6));

        // Verify that the vulnerability was matched correctly.
        assertThat(outputTopic.getQueueSize()).isEqualTo(1);
        assertThat(outputTopic.readRecordsToList()).satisfiesExactly(record -> {
            assertThat(record.getValue().getVulnerabilitiesCount()).isEqualTo(1);
            assertThat(record.getValue().getVulnerabilities(0).getId()).isEqualTo("SNYK-DOTNET-MICROSOFTASPNETCOREAPPRUNTIMELINUXX64-3060151");
        });
    }

    @Test
    void testRetry() throws Exception {
        when(snykClientMock.getIssues(anyString(), anyString(), any(ReportRequest.class)))
                .thenThrow(new WebApplicationException(Response.status(Status.TOO_MANY_REQUESTS).build()))
                .thenThrow(new WebApplicationException(Response.status(Status.TOO_MANY_REQUESTS).build()))
                .thenThrow(new WebApplicationException(Response.status(Status.TOO_MANY_REQUESTS).build()))
                .thenReturn(getSnykResponseTestData("no-issues-response.json"));

        // Submit a complete batch, so we don't have to deal with punctuation
        // times of incomplete batches AND retries here.
        for (int i = 0; i < 100; i++) {
            inputTopic.pipeInput(createTestRecord("pkg:maven/com.fasterxml.jackson.core/jackson-databind@2.13.%d?type=jar&foo=bar".formatted(i)));
        }

        assertThat(outputTopic.getQueueSize()).isZero();

        // "Wait" for the first retry to happen. The default initial
        // delay is 5 seconds, the multiplier is 2. The first retry can
        // happen anytime between 3.5 and 6.5 seconds from "now".
        testDriver.advanceWallClockTime(Duration.ofSeconds(7));
        assertThat(outputTopic.getQueueSize()).isEqualTo(0);
        verify(snykClientMock, Mockito.times(2)).getIssues(anyString(), anyString(), any(ReportRequest.class));

        // Second retry will happen between 7 and 13 seconds from "now".
        testDriver.advanceWallClockTime(Duration.ofSeconds(14));
        assertThat(outputTopic.getQueueSize()).isEqualTo(0);
        verify(snykClientMock, Mockito.times(3)).getIssues(anyString(), anyString(), any(ReportRequest.class));

        // Third retry will happen between 14 and 26 seconds from "now".
        testDriver.advanceWallClockTime(Duration.ofSeconds(27));
        assertThat(outputTopic.getQueueSize()).isEqualTo(100);
        verify(snykClientMock, Mockito.times(4)).getIssues(anyString(), anyString(), any(ReportRequest.class));

        assertThat(outputTopic.readRecordsToList()).allSatisfy(record -> {
            assertThat(record.getValue().getStatus()).isEqualTo(ScanStatus.SCAN_STATUS_SUCCESSFUL);
            assertThat(record.getValue().hasFailureReason()).isFalse();
            assertThat(record.getValue().getScanner()).isEqualTo(Scanner.SCANNER_SNYK);
            assertThat(record.getValue().getVulnerabilitiesCount()).isZero();
        });
    }

    @Test
    void testNonRetryableError() throws Exception {
        when(snykClientMock.getIssues(anyString(), anyString(), any(ReportRequest.class)))
                .thenThrow(new WebApplicationException(Response.status(Response.Status.BAD_REQUEST).build()));

        final TestRecord<String, ScanTask> inputRecord = createTestRecord("pkg:maven/com.fasterxml.jackson.core/jackson-databind@2.13.1?type=jar&foo=bar");
        inputTopic.pipeInput(inputRecord);

        // First retry would happen between 3.5 and 6.5 seconds from "now".
        // Verify there is not retry happening, as there's no point in retrying
        // a definitive user error.
        testDriver.advanceWallClockTime(Duration.ofSeconds(7));
        verify(snykClientMock, Mockito.times(1)).getIssues(anyString(), anyString(), any(ReportRequest.class));

        assertThat(outputTopic.getQueueSize()).isEqualTo(1);
        final TestRecord<ScanKey, ScannerResult> outputRecord = outputTopic.readRecord();
        assertThat(outputRecord.key()).isEqualTo(inputRecord.getValue().getKey());
        assertThat(outputRecord.getValue().getStatus()).isEqualTo(ScanStatus.SCAN_STATUS_FAILED);
        assertThat(outputRecord.getValue().hasFailureReason()).isTrue();
        assertThat(outputRecord.getValue().getScanner()).isEqualTo(Scanner.SCANNER_SNYK);
        assertThat(outputRecord.getValue().getVulnerabilitiesCount()).isZero();
    }

    @Test
    void testRetryMaxAttemptsExceeded() throws Exception {
        when(snykClientMock.getIssues(anyString(), anyString(), any(ReportRequest.class)))
                .thenThrow(new WebApplicationException(Response.status(Response.Status.TOO_MANY_REQUESTS).build()))
                .thenThrow(new WebApplicationException(Response.status(Response.Status.INTERNAL_SERVER_ERROR).build()))
                .thenThrow(new WebApplicationException(Response.status(Response.Status.SERVICE_UNAVAILABLE).build()))
                .thenThrow(new WebApplicationException(Response.status(Response.Status.BAD_GATEWAY).build()))
                .thenThrow(new RuntimeException(new SocketTimeoutException()))
                .thenThrow(new WebApplicationException(Response.status(Response.Status.TOO_MANY_REQUESTS).build()));

        // Submit a complete batch, so we don't have to deal with punctuation
        // times of incomplete batches AND retries here.
        for (int i = 0; i < 100; i++) {
            inputTopic.pipeInput(createTestRecord("pkg:maven/com.fasterxml.jackson.core/jackson-databind@2.13.%d?type=jar&foo=bar".formatted(i)));
        }

        assertThat(outputTopic.getQueueSize()).isZero();

        // First retry will happen between 3.5 and 6.5 seconds from "now".
        testDriver.advanceWallClockTime(Duration.ofSeconds(7));
        assertThat(outputTopic.getQueueSize()).isEqualTo(0);
        verify(snykClientMock, Mockito.times(2)).getIssues(anyString(), anyString(), any(ReportRequest.class));

        // Second retry will happen between 7 and 13 seconds from "now".
        testDriver.advanceWallClockTime(Duration.ofSeconds(14));
        assertThat(outputTopic.getQueueSize()).isEqualTo(0);
        verify(snykClientMock, Mockito.times(3)).getIssues(anyString(), anyString(), any(ReportRequest.class));

        // Third retry will happen between 14 and 26 seconds from "now".
        testDriver.advanceWallClockTime(Duration.ofSeconds(27));
        assertThat(outputTopic.getQueueSize()).isEqualTo(0);
        verify(snykClientMock, Mockito.times(4)).getIssues(anyString(), anyString(), any(ReportRequest.class));

        // Fourth retry will happen between 28 and 52 seconds from "now".
        testDriver.advanceWallClockTime(Duration.ofSeconds(53));
        assertThat(outputTopic.getQueueSize()).isEqualTo(0);
        verify(snykClientMock, Mockito.times(5)).getIssues(anyString(), anyString(), any(ReportRequest.class));

        // Fifth retry will happen between 56 and 104 seconds from "now".
        testDriver.advanceWallClockTime(Duration.ofSeconds(105));
        assertThat(outputTopic.getQueueSize()).isEqualTo(0);
        verify(snykClientMock, Mockito.times(6)).getIssues(anyString(), anyString(), any(ReportRequest.class));

        // Sixth retry will happen between 112 and 120 seconds from "now".
        // 120 seconds is the default maximum delay.
        testDriver.advanceWallClockTime(Duration.ofSeconds(121));
        assertThat(outputTopic.getQueueSize()).isEqualTo(100);
        verify(snykClientMock, Mockito.times(7)).getIssues(anyString(), anyString(), any(ReportRequest.class));

        assertThat(outputTopic.readRecordsToList()).allSatisfy(record -> {
            assertThat(record.getValue().getStatus()).isEqualTo(ScanStatus.SCAN_STATUS_FAILED);
            assertThat(record.getValue().getFailureReason()).contains("exceeded");
            assertThat(record.getValue().getScanner()).isEqualTo(Scanner.SCANNER_SNYK);
            assertThat(record.getValue().getVulnerabilitiesCount()).isZero();
        });
    }


    @Test
    void testCircuitBreaker() throws Exception {
        when(snykClientMock.getIssues(anyString(), anyString(), any(ReportRequest.class)))
                .thenThrow(new WebApplicationException(Response.status(Response.Status.INTERNAL_SERVER_ERROR).build()));

        for (int i = 0; i < 105; i++) {
            for (int j = 0; j < 100; j++) {
                inputTopic.pipeInput(createTestRecord("pkg:maven/com.fasterxml.jackson.core/jackson-databind@2.13.%d?type=jar&foo=bar".formatted(i)));
            }
        }

        // Circuit breaker should have opened after 100 failures.
        verify(snykClientMock, Mockito.times(100)).getIssues(anyString(), anyString(), any(ReportRequest.class));
    }

    private TestRecord<String, ScanTask> createTestRecord(final String purl) throws MalformedPackageURLException {
        final PackageURL packageURL = new PackageURL(purl);
        final String key = packageURL.getCoordinates();
        final var component = Component.newBuilder()
                .setUuid(UUID.randomUUID().toString())
                .setPurl(packageURL.toString())
                .build();
        final var scanKey = ScanKey.newBuilder()
                .setScanToken(UUID.randomUUID().toString())
                .setComponentUuid(component.getUuid())
                .build();
        return new TestRecord<>(key, ScanTask.newBuilder()
                .setKey(scanKey)
                .setScanner(Scanner.SCANNER_SNYK)
                .setComponent(component)
                .build());
    }

    private Page<Issue> getSnykResponseTestData(final String name) throws IOException {
        return objectMapper.readValue(
                getClass().getClassLoader().getResource(Paths.get("snyk", name).toString()),
                new TypeReference<>() {
                }
        );
    }

}